fixed link to dew point plot

--- a/dew_point_heat_index_and_temperature_comfort.ipynb
+++ b/dew_point_heat_index_and_temperature_comfort.ipynb
@@ -8,7 +8,7 @@
     "# <div align=\"center\">Dew Point and Thermal Comfort</div>\n",
     "This notebook is a __compilation of publicly available information__ and open access scientific articles __related to human thermal comfort__ in hot and humid conditions. The Python™ code developed for this notebook calculates the dew point for local conditions and determines the categories of human thermal comfort assigned to these parameters.\n",
     "\n",
-    "**Summary:** A __[figure](#my-figure)__ showing the relationship between dew point, air temperature and relative humity with comfort leves.\n",
+    "**Summary:** A __[figure](#Plot-dew-point)__ showing the relationship between dew point, air temperature and relative humity with comfort leves.\n",
     "\n",
     "---\n",
     "\n",
@@ -213,8 +213,8 @@
    "id": "29168f65-a6ed-46ed-8c08-7a4544cd0568",
    "metadata": {},
    "source": [
-    "## Step 6 Plot dew point as a function of temperature and relative humidity with comfort categories\n",
-    "<a id=\"my-figure\"></a>"
+    "## Plot dew point\n",
+    "Plot dew point as a function of temperature and relative humidity with comfort categories.\n"
    ]
   },
   {
